--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2016 Gábor Lipták &middot; 
+      &copy; 2016-2017 Gábor Lipták &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
