deploy: 99ab4f4d2a9957ef28aa09a04161b0159caabfc8

--- a/index.html
+++ b/index.html
@@ -843,6 +843,16 @@
     </ul>
 
     
+    <div class="d-none">
+      <input id="map-provider" value="2">
+      <input id="map-lat" value="29">
+      <input id="map-lng" value="-82">
+      <input id="map-dir" value="Jacksonville, FL">
+      <input id="map-zoom" value="15">
+      <input id="map-api-key" value="">
+    </div>
+    <div id="map"></div>
+    
 
   </div>
 </div>
