deploy: 27749c2455dd521629377cb13e542015a5240d2d

--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
         
         <li>
           <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
-          <span id="person-address">Jacksonville, FL</span>
+          <span id="person-address">FL, USA</span>
         </li>
       
 
@@ -847,8 +847,8 @@
       <input id="map-provider" value="2">
       <input id="map-lat" value="29">
       <input id="map-lng" value="-82">
-      <input id="map-dir" value="Jacksonville, FL">
-      <input id="map-zoom" value="15">
+      <input id="map-dir" value="FL, USA">
+      <input id="map-zoom" value="10">
       <input id="map-api-key" value="">
     </div>
     <div id="map"></div>
