deploy: 7cbb3164e9af87b0fd57225e2969218211ea8d7c

--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
     
     <div class="article-style">
       GraphQL API allows for query and mutation (update) operations which can be executed in GitHub&rsquo;s GraphQL Explorer Below example creates a PR. First, find the repository id:
-{ repository(owner: &#34;gliptak&#34;, name: &#34;githubapitest1&#34;) { id } } The repository id to be used to create the pull request:
+{ repository(owner: &quot;gliptak&quot;, name: &quot;githubapitest1&quot;) { id } } The repository id to be used to create the pull request:
 { &#34;data&#34;: { &#34;repository&#34;: { &#34;id&#34;: &#34;R_kgDOGS1otA&#34; } } } The mutation (update) below creates a new PR from an existing branch (additional details could have been submitted):
     </div>
     
